# ubuntu-cycle

./: README.md  pyproject.toml
ubuntu_cycle/: check_database.py  main.py  populate_dummy_data.py  ubuntucycle.db
ubuntu_cycle/static/: style.css
ubuntu_cycle/templates/: admin.html  index.html
